<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/functions_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="8"
            android:orientation="horizontal">


    <Button
        android:id="@+id/sin"
        style="@style/KeyboardButton"
        android:tag="@string/sin"
        android:text="@string/sin"/>

    <Button
        android:id="@+id/cos"
        style="@style/KeyboardButton"
        android:tag="@string/cos"
        android:text="@string/cos"/>

    <Button
        android:id="@+id/tan"
        style="@style/KeyboardButton"
        android:tag="@string/tan"
        android:text="@string/tan"/>

    <Button
        android:id="@+id/cot"
        style="@style/KeyboardButton"
        android:tag="@string/cot"
        android:text="@string/cot"/>

    <Button
        android:id="@+id/asin"
        style="@style/KeyboardButton"
        android:tag="@string/asin"
        android:text="@string/asin"/>

    <Button
        android:id="@+id/acos"
        style="@style/KeyboardButton"
        android:tag="@string/acos"
        android:text="@string/acos"/>

    <Button
        android:id="@+id/atan"
        style="@style/KeyboardButton"
        android:tag="@string/atan"
        android:text="@string/atan"/>

    <Button
        android:id="@+id/acot"
        style="@style/KeyboardButton"
        android:tag="@string/acot"
        android:text="@string/acot"/>

    <Button
        android:id="@+id/pow"
        style="@style/KeyboardButton"
        android:tag="@string/pow"
        android:text="@string/pow"/>

    <Button
        android:id="@+id/sqrt"
        style="@style/KeyboardButton"
        android:tag="@string/sqrt"
        android:text="@string/sqrt"/>

    <Button
        android:id="@+id/exp"
        style="@style/KeyboardButton"
        android:tag="@string/exp"
        android:text="@string/exp"/>

    <Button
        android:id="@+id/fact"
        style="@style/KeyboardButton"
        android:tag="@string/fact"
        android:text="@string/fact"/>

    <Button
        android:id="@+id/sinh"
        style="@style/KeyboardButton"
        android:tag="@string/sinh"
        android:text="@string/sinh"/>

    <Button
        android:id="@+id/cosh"
        style="@style/KeyboardButton"
        android:tag="@string/cosh"
        android:text="@string/cosh"/>

    <Button
        android:id="@+id/tanh"
        style="@style/KeyboardButton"
        android:tag="@string/tanh"
        android:text="@string/tanh"/>

    <Button
        android:id="@+id/coth"
        style="@style/KeyboardButton"
        android:tag="@string/coth"
        android:text="@string/coth"/>

    <Button
        android:id="@+id/ln"
        style="@style/KeyboardButton"
        android:tag="@string/ln"
        android:text="@string/ln"/>

    <Button
        android:id="@+id/log"
        style="@style/KeyboardButton"
        android:tag="@string/log"
        android:text="@string/log"/>

    <Button
        android:id="@+id/log10"
        style="@style/KeyboardButton"
        android:tag="@string/log10"
        android:text="@string/log10"/>

    <Button
        android:id="@+id/abs"
        style="@style/KeyboardButton"
        android:tag="@string/abs"
        android:text="@string/abs"/>

    <Button
        android:id="@+id/min"
        style="@style/KeyboardButton"
        android:tag="@string/min"
        android:text="@string/min"/>

    <Button
        android:id="@+id/max"
        style="@style/KeyboardButton"
        android:tag="@string/max"
        android:text="@string/max"/>

    <Button
        android:id="@+id/random"
        style="@style/KeyboardButton"
        android:tag="@string/random"
        android:text="@string/random"/>

    <Button
        android:id="@+id/mod"
        style="@style/KeyboardButton"
        android:tag="@string/mod"
        android:text="@string/mod"/>

    <Button
        android:id="@+id/pi"
        style="@style/KeyboardButton"
        android:tag="@string/pi"
        android:text="@string/pi"/>

    <Button
        android:id="@+id/e"
        style="@style/KeyboardButton"
        android:tag="@string/e"
        android:text="@string/e"/>

    <Button
        android:id="@+id/round"
        style="@style/KeyboardButton"
        android:tag="@string/round"
        android:text="@string/round"/>

    <Button
        android:id="@+id/sgn"
        style="@style/KeyboardButton"
        android:tag="@string/sgn"
        android:text="@string/sgn"/>

    <Button
        android:id="@+id/floor"
        style="@style/KeyboardButton"
        android:tag="@string/floor"
        android:text="@string/floor"/>

    <Button
        android:id="@+id/ceil"
        style="@style/KeyboardButton"
        android:tag="@string/ceil"
        android:text="@string/ceil"/>
</GridLayout>