<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_keyboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/open_bracket_button"
                style="@style/CalculatorButton"
                android:text="@string/open_bracket" />

            <Button
                android:id="@+id/close_bracket_button"
                style="@style/CalculatorButton"
                android:text="@string/close_bracket" />

            <Button
                android:id="@+id/clear_button"
                style="@style/CalculatorButton"
                android:text="@string/clean" />

            <Button
                android:id="@+id/division_button"
                style="@style/CalculatorButton"
                android:text="@string/division" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/seven_button"
                style="@style/CalculatorButton"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight_button"
                style="@style/CalculatorButton"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine_button"
                style="@style/CalculatorButton"
                android:text="@string/nine" />

            <Button
                android:id="@+id/times_button"
                style="@style/CalculatorButton"
                android:text="@string/times" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/four_button"
                style="@style/CalculatorButton"
                android:text="@string/four" />

            <Button
                android:id="@+id/five_button"
                style="@style/CalculatorButton"
                android:text="@string/five" />

            <Button
                android:id="@+id/six_button"
                style="@style/CalculatorButton"
                android:text="@string/six" />

            <Button
                android:id="@+id/minus_button"
                style="@style/CalculatorButton"
                android:text="@string/minus" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/one_button"
                style="@style/CalculatorButton"
                android:text="@string/one" />

            <Button
                android:id="@+id/two_button"
                style="@style/CalculatorButton"
                android:text="@string/two" />

            <Button
                android:id="@+id/three_button"
                style="@style/CalculatorButton"
                android:text="@string/three" />

            <Button
                android:id="@+id/plus_button"
                style="@style/CalculatorButton"
                android:text="@string/plus" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/zero_button"
                style="@style/CalculatorButton"
                android:text="@string/zero" />

            <Button
                android:id="@+id/point_button"
                style="@style/CalculatorButton"
                android:text="@string/point" />

            <Button
                android:id="@+id/comma_button"
                style="@style/CalculatorButton"
                android:text="@string/comma" />

            <Button
                android:id="@+id/equals_button"
                style="@style/CalculatorButton"
                android:text="@string/equals" />
        </TableRow>
    </TableLayout>
</ScrollView>