<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/math_keyboard">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@id/open_bracket_button"
                style="@style/CalculatorButton"
                android:text="@string/open_bracket" />

            <Button
                android:id="@id/close_bracket_button"
                style="@style/CalculatorButton"
                android:text="@string/close_bracket" />

            <Button
                android:id="@id/point_button"
                style="@style/CalculatorButton"
                android:text="@string/point" />

            <Button
                android:id="@id/comma_button"
                style="@style/CalculatorButton"
                android:text="@string/comma" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@id/plus_button"
                style="@style/CalculatorButton"
                android:text="@string/plus" />

            <Button
                android:id="@id/minus_button"
                style="@style/CalculatorButton"
                android:text="@string/minus" />

            <Button
                android:id="@id/times_button"
                style="@style/CalculatorButton"
                android:text="@string/times" />

            <Button
                android:id="@id/division_button"
                style="@style/CalculatorButton"
                android:text="@string/division" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/abs_button"
                style="@style/CalculatorButton"
                android:text="@string/abs" />

            <Button
                android:id="@+id/ceil_button"
                style="@style/CalculatorButton"
                android:text="@string/ceil" />

            <Button
                android:id="@+id/floor_button"
                style="@style/CalculatorButton"
                android:text="@string/floor" />

            <Button
                android:id="@+id/round_button"
                style="@style/CalculatorButton"
                android:text="@string/round" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/min_button"
                style="@style/CalculatorButton"
                android:text="@string/min" />

            <Button
                android:id="@+id/max_button"
                style="@style/CalculatorButton"
                android:text="@string/max" />

            <Button
                android:id="@+id/random_button"
                style="@style/CalculatorButton"
                android:text="@string/random" />

            <Button
                android:id="@+id/signum_button"
                style="@style/CalculatorButton"
                android:text="@string/signum" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/fact_button"
                style="@style/CalculatorButton"
                android:text="@string/fact" />

            <Button
                android:id="@+id/mod_button"
                style="@style/CalculatorButton"
                android:text="@string/mod" />
        </TableRow>
    </TableLayout>
</ScrollView>