<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pow_keyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@id/open_bracket_button"
                style="@style/CalculatorButton"
                android:text="@string/open_bracket" />

            <Button
                android:id="@id/close_bracket_button"
                style="@style/CalculatorButton"
                android:text="@string/close_bracket" />

            <Button
                android:id="@id/point_button"
                style="@style/CalculatorButton"
                android:text="@string/point" />

            <Button
                android:id="@id/comma_button"
                style="@style/CalculatorButton"
                android:text="@string/comma" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@id/plus_button"
                style="@style/CalculatorButton"
                android:text="@string/plus" />

            <Button
                android:id="@id/minus_button"
                style="@style/CalculatorButton"
                android:text="@string/minus" />

            <Button
                android:id="@id/times_button"
                style="@style/CalculatorButton"
                android:text="@string/times" />

            <Button
                android:id="@id/division_button"
                style="@style/CalculatorButton"
                android:text="@string/division" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/pow_button"
                style="@style/CalculatorButton"
                android:text="@string/pow" />

            <Button
                android:id="@+id/sqrt_button"
                style="@style/CalculatorButton"
                android:text="@string/sqrt" />

            <Button
                android:id="@+id/exp_button"
                style="@style/CalculatorButton"
                android:text="@string/exp" />
        </TableRow>
    </TableLayout>
</ScrollView>