<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/smallPadding"
    android:paddingRight="@dimen/smallPadding">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/variable_name"
        android:layout_weight="3"
        android:maxLength="@integer/maxNameLength"
        android:hint="@string/variable_name"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/variable_value"
        android:layout_weight="7"
        android:hint="@string/variable_value"/>
    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/check_button"
        android:background="@null"
        android:contentDescription="@string/use"
        android:src="@drawable/check_button"/>
    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/remove_button"
        android:contentDescription="@string/delete"
        android:background="@null"
        android:src="@drawable/remove_button"/>

</LinearLayout>